// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DialogTitle ENCOURA theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1i168ue-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1i168ue-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-cktw69-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;

exports[`DialogTitle ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1vp8pd2-MuiTypography-root-MuiDialogTitle-root"
  >
    Hey
  </h2>
</div>
`;
